Fixes: stat.php - fixed strange order within same _points. Chat - fixes exploit to use Admin's colors. statfunctions.php - uses id_owner as secondary index to correctly sort stats with same _points

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -70,7 +70,9 @@ V0000
 [?] Автоматическое обновление статистики
 [?] Доработать функцию $debug->warning()
 [?] Экпедиции - поставить зависимость ТМ от емкости трюма кораблей
-[?] Отрицательные ресурсы при отправке флота со страницы галактики
+[?] Отрицательные ресурсы при отправке флота со страницы галактики - _errors "Player have negative resources"
+[?] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
+    всем по списку
 [?] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через
     глобальные переменные $_POST
 [?] Движок: закрыть дыры в корневом каталоге
