fix-ECO-32a14: CRITICAL! Fixed vulnerability that allowed buy many sequental fast builds/cancels gain extra resources

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a13
+Текущая версия 32a14
 --------------------
 
 [!] Исправлена работа с большими числами:
@@ -67,6 +67,8 @@
     хранилищ
 [%] Друзья: Исправлена надпись с неправильной кодировкой при ответе  на  письмо
     друга/кандидата
+[%] Исправлена уязвимость, позволяющая быстрыми многократными  постройками  или
+    отменами добиться увеличения ресурсов
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
