fix-ECO-33a19: Fixed exploit - cancelling research will transfer resources to current planet - not to where research was started

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [#] Модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a18
---------------------
+Текущая версия 33a19
+====================
 
 [#] Альянсы:  Альянсы  теперь  могут  рекрутировать  Наемников  и  исследовать
     технологии!
@@ -153,9 +153,11 @@
     2.  В  случае  отсутствия  МИС  для  проведения   исследования   выбирается
        лаборатория  с  максимальным  эффективным   уровнем   (т.е.   с   учетом
        нанолабораторий)
-    Награда за квесты на исследование теперь  всегда  начисляется  на  основную
+    3. При отмене исследования ресурсы возвращаются на ту  планету,  с  которой
+    были взяты
+    4. Награда за квесты на исследование теперь всегда начисляется на  основную
     планету игрока
-    При апдейте все идущие исследования  будут  перенесены  в  пользовательскую
+    5. При апдейте все идущие исследования будут перенесены в  пользовательскую
     очередь
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
@@ -872,7 +874,7 @@ Project "SuperNova.WS" Release 28 "Chatting Diplomacy Alliance Bashing"
       электростанций
       В-третьих - Производство энергии на  термоядерной  электростанции  теперь
       считается по формуле оффа:
-        30 * [Э] * (1,05 + [Е] * 0,01) ^ [Э]
+        30 * (Э) * (1,05 + (Е) * 0,01) ^ (Э)
       где Э - уровень электростанции, Т - уровень энергетической технологии
       В-четвертых - энергетическая технология  больше  не  дает  дополнительный
       бонус к производительности электроэнергии
