fix-FLT-33a31.1: Fixed vulnerability for fleet duplication

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
 [@] Эта информация будет  интересна  только  админам  и/или  разработчикам/This
     information is only for administrators and/or developers 
 
-Текущая версия 33a31 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Текущая версия 33a31.1 "Temporary Mercenary Aliplayers Avatar Rename VerCheck"
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 [@] ВНИМАНИЕ!!! PHP 5.3.1 содержит баг, который делает невозможной  полноценную
     работу СН начиная с v33a12! Обновите  PHP,  или  сделайте  откат  до  более
@@ -377,6 +377,7 @@
     Альянса и от Наемников по-прежнему не будут видны в логе боя!
 [%] Альянсы: Исправлена ошибка выхода из Альянса - у игрока  не  затирался  тэг
     Альянса
+[%] Флоты: Исправлена уязвимость, позволяющая дублировать флоты
 
 [@] Админка: Редизайн интерфейса просмотра логов (бывш. "Ошибки")
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
