FLT-fix-34a15.2: Fixed vulnerablity in phalanx send fleet interface

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,7 +11,7 @@
 
 
 
-Текущая версия #34a15.1#
+Текущая версия #34a15.2#
 ~~~~~~~~~~~~~~~~~~~~~~~
 [#] Админка: Редактирование характеристик планеты
     Модуль admin_planet_edit_extra v1c0
@@ -117,8 +117,8 @@
     каждый уровень. Кроме того, бонус к скорости строительства зданий  увеличен
     до 10%. Вследствие этого максимальный уровень уменьшен до 8,  БС  увеличена
     до 500, фактор увеличен до 1.65. У нанятых инженеров уровень понижен в  два
-    раза с округлением в большую сторону. В целом это означает, что  Инженер  в
-    целом стал стоить дешевле в пересчете на эффективный уровень.
+    раза с округлением в большую сторону. В целом  это  означает,  что  Инженер
+    стоит дешевле в пересчете на эффективный уровень.
 
 [~] Альянсы: Немного оптимизирован код страницы Управления Альянсом
 [~] Флоты
@@ -183,6 +183,7 @@
     соответствующие технологии еще не исследованы (например - корабль куплен на
     ЧР или найден в экспедиции)
 [%] Локализация/EN: Исправлены очепятки
+[%] Фаланга: Исправлена уязвимость в отправке флота
 
 [@] Документация: readme преобразован в UTF8
 [@] Добавлена компенсация  работы  механизма  Magic  Quotes.  Подробнее  -  см.
